mflang/grammar/MFLangParser.py
# Generated from mflang/grammar/MFLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MFLangParser ( Parser ):

    grammarFileName = "MFLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'TRUE'", "'FALSE'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'VARIABLE'", 
                     "'IF'", "'THEN'", "'BEGIN'", "'END'", "'AND'", "'OR'", 
                     "'NOT'", "'BP'", "'SP'", "'BK'", "'SK'", "'BPK'", "'SPK'", 
                     "'T_COMMAND'", "'#IMPORT'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'DATE'", "'MINUTE'", 
                     "'BARPOS'", "'REF'", "'BARSLAST'", "'SUMBARS'", "'HHV'", 
                     "'LLV'", "'HHVBARS'", "'LLVBARS'", "'COUNT'", "'MAX'", 
                     "'MAX1'", "'MIN1'", "'ABS'", "'EMA'", "'MA'", "'STD'", 
                     "'SMA'", "'MOD'", "'HV'", "'LV'", "'TIME'", "'BETWEEN'", 
                     "'DRAWLINE3'", "'DRAWTEXT'", "'DRAWTEXT_REL'", "'DRAWCOLORKLINE'", 
                     "'DRAWCOLOR'", "'DRAWTITLE'", "'DRAWHLINE'", "'PRECIS0'", 
                     "'PRECIS1'", "'PRECIS2'", "'PRECIS3'", "'NODRAW'", 
                     "'COLORWHITE'", "'COLORRED'", "'COLORGREEN'", "'COLORYELLOW'", 
                     "'COLORLIGHTRED'", "'COLORLIGHTGREEN'", "'COLORCYAN'", 
                     "'COLORBLUE'", "'COLORPURPLE'", "'LINETHICK1'", "'LINETHICK2'", 
                     "'LINETHICK3'", "'LINETHICK5'", "'RGB'", "'DASH'", 
                     "'DASHDOT'", "'DASHDOTDOT'", "'VOLSTICK'", "'ALIGN0'", 
                     "'ALIGN1'", "'ALIGN2'", "'ALIGN3'", "'ALIGN4'", "'FONTSIZE10'", 
                     "'FONTSIZE12'", "'FONTSIZE14'", "'DOT'", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'<'", "'='", "'<>'", "'>='", 
                     "'<='", "'&&'", "'||'", "'!'", "','", "';'", "':'", 
                     "':='", "'('", "')'", "'['", "']'", "'@'", "'MIN'", 
                     "'HOUR'", "'CUSHOUR'", "'DAY'", "'WEEK'", "'MONTH'", 
                     "'QUARTER'", "'YEAR'", "'AS'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "VARIABLE", "IF", "THEN", "BEGIN", "END", "AND", "OR", 
                      "NOT", "BP", "SP", "BK", "SK", "BPK", "SPK", "T_COMMAND", 
                      "IMPORT", "OPEN", "CLOSE", "HIGH", "LOW", "VOLUME", 
                      "DATE", "MINUTE", "BARPOS", "REF", "BARSLAST", "SUMBARS", 
                      "HHV", "LLV", "HHVBARS", "LLVBARS", "COUNT", "MAX", 
                      "MAX1", "MIN1", "ABS", "EMA", "MA", "STD", "SMA", 
                      "MOD", "HV", "LV", "TIME", "BETWEEN", "DRAWLINE3", 
                      "DRAWTEXT", "DRAWTEXT_REL", "DRAWCOLORKLINE", "DRAWCOLOR", 
                      "DRAWTITLE", "DRAWHLINE", "PRECIS0", "PRECIS1", "PRECIS2", 
                      "PRECIS3", "NODRAW", "COLORWHITE", "COLORRED", "COLORGREEN", 
                      "COLORYELLOW", "COLORLIGHTRED", "COLORLIGHTGREEN", 
                      "COLORCYAN", "COLORBLUE", "COLORPURPLE", "LINETHICK1", 
                      "LINETHICK2", "LINETHICK3", "LINETHICK5", "RGB", "DASH", 
                      "DASHDOT", "DASHDOTDOT", "VOLSTICK", "ALIGN0", "ALIGN1", 
                      "ALIGN2", "ALIGN3", "ALIGN4", "FONTSIZE10", "FONTSIZE12", 
                      "FONTSIZE14", "DOTSTYLE", "PLUS", "MINUS", "MULT", 
                      "DIV", "GT", "LT", "EQ", "NE", "GE", "LE", "AND_OP", 
                      "OR_OP", "NOT_OP", "COMMA", "SEMICOLON", "COLON", 
                      "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "AT", "PERIOD_MIN", "PERIOD_HOUR", "PERIOD_CUSHOUR", 
                      "PERIOD_DAY", "PERIOD_WEEK", "PERIOD_MONTH", "PERIOD_QUARTER", 
                      "PERIOD_YEAR", "AS", "GROUP", "INTEGER", "FLOAT", 
                      "STRING", "IDENTIFIER", "DOT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_importStatement = 2
    RULE_periodType = 3
    RULE_variableDeclaration = 4
    RULE_variableAssignment = 5
    RULE_tradingInstruction = 6
    RULE_tradingCmd = 7
    RULE_tCommandStatement = 8
    RULE_ifThenBlock = 9
    RULE_blockStatement = 10
    RULE_emptyStatement = 11
    RULE_expression = 12
    RULE_primaryExpression = 13
    RULE_literal = 14
    RULE_integer = 15
    RULE_float = 16
    RULE_booleanLiteral = 17
    RULE_stringLiteral = 18
    RULE_klineData = 19
    RULE_functionCall = 20
    RULE_refFunction = 21
    RULE_barslastFunction = 22
    RULE_sumbarsFunction = 23
    RULE_hhvFunction = 24
    RULE_llvFunction = 25
    RULE_hhvbarsFunction = 26
    RULE_llvbarsFunction = 27
    RULE_countFunction = 28
    RULE_maxFunction = 29
    RULE_max1Function = 30
    RULE_minFunction = 31
    RULE_min1Function = 32
    RULE_ifFunction = 33
    RULE_absFunction = 34
    RULE_emaFunction = 35
    RULE_maFunction = 36
    RULE_smaFunction = 37
    RULE_stdFunction = 38
    RULE_modFunction = 39
    RULE_hvFunction = 40
    RULE_lvFunction = 41
    RULE_timeFunction = 42
    RULE_betweenFunction = 43
    RULE_crossPeriodRef = 44
    RULE_formatOption = 45
    RULE_identifier = 46
    RULE_rgbFunction = 47
    RULE_drawStatement = 48
    RULE_drawArg = 49
    RULE_drawFunction = 50
    RULE_formatOnlyStatement = 51

    ruleNames =  [ "program", "statement", "importStatement", "periodType", 
                   "variableDeclaration", "variableAssignment", "tradingInstruction", 
                   "tradingCmd", "tCommandStatement", "ifThenBlock", "blockStatement", 
                   "emptyStatement", "expression", "primaryExpression", 
                   "literal", "integer", "float", "booleanLiteral", "stringLiteral", 
                   "klineData", "functionCall", "refFunction", "barslastFunction", 
                   "sumbarsFunction", "hhvFunction", "llvFunction", "hhvbarsFunction", 
                   "llvbarsFunction", "countFunction", "maxFunction", "max1Function", 
                   "minFunction", "min1Function", "ifFunction", "absFunction", 
                   "emaFunction", "maFunction", "smaFunction", "stdFunction", 
                   "modFunction", "hvFunction", "lvFunction", "timeFunction", 
                   "betweenFunction", "crossPeriodRef", "formatOption", 
                   "identifier", "rgbFunction", "drawStatement", "drawArg", 
                   "drawFunction", "formatOnlyStatement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    WS=5
    LINE_COMMENT=6
    BLOCK_COMMENT=7
    VARIABLE=8
    IF=9
    THEN=10
    BEGIN=11
    END=12
    AND=13
    OR=14
    NOT=15
    BP=16
    SP=17
    BK=18
    SK=19
    BPK=20
    SPK=21
    T_COMMAND=22
    IMPORT=23
    OPEN=24
    CLOSE=25
    HIGH=26
    LOW=27
    VOLUME=28
    DATE=29
    MINUTE=30
    BARPOS=31
    REF=32
    BARSLAST=33
    SUMBARS=34
    HHV=35
    LLV=36
    HHVBARS=37
    LLVBARS=38
    COUNT=39
    MAX=40
    MAX1=41
    MIN1=42
    ABS=43
    EMA=44
    MA=45
    STD=46
    SMA=47
    MOD=48
    HV=49
    LV=50
    TIME=51
    BETWEEN=52
    DRAWLINE3=53
    DRAWTEXT=54
    DRAWTEXT_REL=55
    DRAWCOLORKLINE=56
    DRAWCOLOR=57
    DRAWTITLE=58
    DRAWHLINE=59
    PRECIS0=60
    PRECIS1=61
    PRECIS2=62
    PRECIS3=63
    NODRAW=64
    COLORWHITE=65
    COLORRED=66
    COLORGREEN=67
    COLORYELLOW=68
    COLORLIGHTRED=69
    COLORLIGHTGREEN=70
    COLORCYAN=71
    COLORBLUE=72
    COLORPURPLE=73
    LINETHICK1=74
    LINETHICK2=75
    LINETHICK3=76
    LINETHICK5=77
    RGB=78
    DASH=79
    DASHDOT=80
    DASHDOTDOT=81
    VOLSTICK=82
    ALIGN0=83
    ALIGN1=84
    ALIGN2=85
    ALIGN3=86
    ALIGN4=87
    FONTSIZE10=88
    FONTSIZE12=89
    FONTSIZE14=90
    DOTSTYLE=91
    PLUS=92
    MINUS=93
    MULT=94
    DIV=95
    GT=96
    LT=97
    EQ=98
    NE=99
    GE=100
    LE=101
    AND_OP=102
    OR_OP=103
    NOT_OP=104
    COMMA=105
    SEMICOLON=106
    COLON=107
    ASSIGN=108
    LPAREN=109
    RPAREN=110
    LBRACKET=111
    RBRACKET=112
    AT=113
    PERIOD_MIN=114
    PERIOD_HOUR=115
    PERIOD_CUSHOUR=116
    PERIOD_DAY=117
    PERIOD_WEEK=118
    PERIOD_MONTH=119
    PERIOD_QUARTER=120
    PERIOD_YEAR=121
    AS=122
    GROUP=123
    INTEGER=124
    FLOAT=125
    STRING=126
    IDENTIFIER=127
    DOT=128

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MFLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MFLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(MFLangParser.StatementContext,i)


        def getRuleIndex(self):
            return MFLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MFLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152921504606815006) != 0) or ((((_la - 92)) & ~0x3f) == 0 and ((1 << (_la - 92)) & 64439341059) != 0):
                self.state = 104
                self.statement()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(MFLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self):
            return self.getTypedRuleContext(MFLangParser.ImportStatementContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(MFLangParser.VariableDeclarationContext,0)


        def variableAssignment(self):
            return self.getTypedRuleContext(MFLangParser.VariableAssignmentContext,0)


        def tradingInstruction(self):
            return self.getTypedRuleContext(MFLangParser.TradingInstructionContext,0)


        def tCommandStatement(self):
            return self.getTypedRuleContext(MFLangParser.TCommandStatementContext,0)


        def ifThenBlock(self):
            return self.getTypedRuleContext(MFLangParser.IfThenBlockContext,0)


        def drawStatement(self):
            return self.getTypedRuleContext(MFLangParser.DrawStatementContext,0)


        def formatOnlyStatement(self):
            return self.getTypedRuleContext(MFLangParser.FormatOnlyStatementContext,0)


        def emptyStatement(self):
            return self.getTypedRuleContext(MFLangParser.EmptyStatementContext,0)


        def getRuleIndex(self):
            return MFLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MFLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.importStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.variableDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.variableAssignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.tradingInstruction()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.tCommandStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 117
                self.ifThenBlock()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.drawStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 119
                self.formatOnlyStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 120
                self.emptyStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(MFLangParser.IMPORT, 0)

        def LBRACKET(self):
            return self.getToken(MFLangParser.LBRACKET, 0)

        def periodType(self):
            return self.getTypedRuleContext(MFLangParser.PeriodTypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MFLangParser.COMMA)
            else:
                return self.getToken(MFLangParser.COMMA, i)

        def integer(self):
            return self.getTypedRuleContext(MFLangParser.IntegerContext,0)


        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MFLangParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MFLangParser.IdentifierContext,i)


        def RBRACKET(self):
            return self.getToken(MFLangParser.RBRACKET, 0)

        def AS(self):
            return self.getToken(MFLangParser.AS, 0)

        def SEMICOLON(self):
            return self.getToken(MFLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MFLangParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):
